--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.487.0",
     "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.2.0",
