--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-vue-next": "^0.487.0",
     "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13"
